# owfs

./: .cvsignore  .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  COPYING  COPYING.LIB  ChangeLog  Dockerfile.release  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.DEVELOPERS  README.md  RELEASE.md  TODO  acinclude.m4  bootstrap  bootstrap_solaris  configure  configure.ac  configure.in  description-pak  man2md  owfs.1  release.pl  update_wiki_manpages
module/: Makefile.am
module/owcapi/: .gitignore  Makefile.am  owcapi.pc.in
module/owcapi/src/: Makefile.am
module/owcapi/src/c/: .cvsignore  Makefile.am  owcapi.c
module/owcapi/src/example/: .cvsignore  Makefile  Makefile.am  Makefile.example  Makefile.in  Makefile.solaris  owcapiexample.c  owdir.c
module/owcapi/src/example++/: Makefile.example  Makefile.in  owcapiexample.cpp
module/owcapi/src/include/: .cvsignore  Makefile.am  owcapi.h
module/owcapi/src/man/: Makefile.am
module/owexternal/src/: .cvsignore
module/owexternal/src/c/: Makefile.am  dir.c  dirall.c  error.c  handler.c  owexternal.c  owserver.c  ping.c
module/owexternal/src/include/: .cvsignore  Makefile.am  owexternal.h  owserver.h
module/owfs/src/c/: .cvsignore  Makefile.am  fuse_line.c  owcapi.c  owfs.c  owfs_callback.c
module/owfs/src/include/: Makefile.am  owcapi.h  owfs.h
module/owfs/src/man/: DS1822.3  DS18B20.3  DS1992.3  DS1996.3  DS2401.3  DS2405.3  DS2406.3  DS2408.3  DS2409.3  DS2415.3  DS2423.3  DS2436.3  DS2450.3  DS2505.3  DS2506.3  LCD.3  Makefile.am  owfs.1
module/owftpd/: AUTHORS  BUGS  COPYING  ChangeLog  Makefile.am  NEWS  README  TODO  acconfig.h
module/owftpd/src/: Makefile.am
module/owftpd/src/c/: .cvsignore  Makefile.am  daemon_assert.c  error.c  file_cd.c  file_list.c  file_manip.c  ftp_command.c  ftp_error.c  ftp_listener.c  ftp_session.c  oftpd.c  owftpd.c  telnet_session.c  watchdog.c
module/owftpd/src/include/: Makefile.am  af_portability.h  daemon_assert.h  error.h  file_list.h  ftp_command.h  ftp_error.h  ftp_listener.h  ftp_session.h  oftpd.h  owftpd.h  telnet_session.h  watchdog.h
module/owftpd/src/man/: Makefile.am
module/owhttpd/src/: Makefile.am
module/owhttpd/src/c/: .cvsignore  Makefile.am  owhttpd.c  owhttpd_dir.c  owhttpd_escape.c  owhttpd_favicon.c  owhttpd_handler.c  owhttpd_present.c  owhttpd_read.c  (+1 more)
module/owlib/src/: Makefile.am
module/owlib/tests/: Makefile.am  check_ow_parseinput.c  ow_testhelper.c  ow_testhelper.h  owlib_test  owlib_test.c
module/owmon/: Makefile.am  owmon.tcl
module/ownet/: Makefile.am  ownet.php
module/ownet/VisualBasic/: OWNet.ctl  OWNet_VB.vbp  frmTest.frm
module/ownet/dotNET/: AssemblyInfo.cs  OWNet.cs  OWNet.csproj  OWNet.sln
module/ownet/java/: .cvsignore  Makefile.opt  README  build.xml
module/ownet/pascal/: .cvsignore  README.txt  ownet.pas
module/ownet/perl5/: Makefile.am  OWNet.pm
module/ownet/php/: .cvsignore  Makefile.am  ownet.php
module/ownet/python/: .cvsignore  Makefile.am  Readme.txt  Readme_pypi.txt  setup.py
module/ownet/ruby/: connection.rb  ownet.rb  sensor.rb
module/owserver/: Makefile.am
module/owserver/src/: Makefile.am
module/owshell/src/: Makefile.am
module/owside/: Makefile.am  owside.tcl
module/owtap/: Makefile.am  owmon.tcl  owside.tcl  owtap.tcl
module/owtcl/: Makefile.am  ow.c  ow.tcl  owtclInitScript.h  tcl.m4  version.h
module/owtcl/example/: owdir.tcl  test.tcl
module/simulants/: notebook.tcl  ow.tcl  ow18b20.tcl  ow18xx.tcl  ow2.tcl  ow2401.tcl  ow3.tcl  ow4.tcl  owabout.tcl  owaddress.tcl  owaggregate.tcl  owcmdlin.tcl  owdisplay.tcl  owhandler.tcl  owhelp.tcl  owlog.tcl  owmenu.tcl  ownet.tcl  owsim.tcl  owsim2.tcl  rnotebook.tcl  sample.tcl  tiletest.tcl
module/swig/: Makefile.am  ow.i
module/swig/perl5/: .cvsignore  .gitignore  Makefile.PL.in  Makefile.am  Makefile_osx.PL.in  perl-version  perl5.m4  test.pl
module/swig/php/: .cvsignore  Makefile.am  load_php_OW.php  php.m4  php4.m4  php_OW.h  runme.php
module/swig/python/: .cvsignore  Makefile.am  ow.py  python.m4  setup.py  setup.py.in  test.py  tree.py
module/swig/tcl/: .cvsignore  Makefile.am  ow.c  ow.tcl  owtclInitScript.h  tcl.m4  version.h
src/c/: Makefile.am  ow_fs_callback.c  owfs.c  owfs_callback.c
src/include/: .cvsignore  Makefile.am  config.h.in  owfs.h  owfs_config.h  owfs_config.h.in
src/man/: .gitignore  DS1821.3  DS1822.3  DS1825.3  DS18B20.3  DS18S20.3  DS1904.3  DS1920.3  DS1921.3  DS1963L.3  DS1963S.3  DS1971.3  DS1977.3  DS1985U.3  DS1990A.3  DS1991.3  DS1992.3  DS1993.3  DS1995.3  DS1996.3  DS2401.3  DS2404.3  DS2404S.3  DS2405.3  DS2406.3  DS2407.3  DS2408.3  DS2409.3  DS2413.3  DS2415.3  DS2417.3  DS2423.3  DS2430A.3  DS2431.3  DS2433.3  DS2436.3  DS2437.3  DS2438.3  DS2450.3  DS2502-E48.3  (+90 more)
src/man/man1/: Makefile.am  cmdline_mini.1so  configuration.1so  description.1so  device.1so  format.1so  help.1so  job_control.1so  libowcapi.1  owcapi.man  owexist.1  owfs.man  owftpd.man  owhttpd.man  owmon.man  ownet.man  owserver.man  owshell.man  owtap.man  persistent_thresholds.1so  pressure.1so  temperature.1so  timeout.1so
src/man/man3/: DS1821.man  DS1822.man  DS1825.man  DS18B20.man  DS18S20.man  DS1920.3  DS1921.man  DS1963L.man  DS1963S.man  DS1971.3  DS1977.man  DS1982U.3  DS1986U.3  DS1991.man  DS1992.man  DS1993.man  DS1995.man  DS1996.man  DS2401.man  DS2404.man  DS2404S.3  DS2405.man  DS2406.man  DS2407.3  DS2408.man  DS2409.man  DS2411.3  DS2413.man  DS2415.man  DS2423.man  DS2430A.man  DS2431.man  DS2433.man  DS2436.man  DS2437.man  DS2438.man  DS2450.man  DS2502.man  DS2505-UNW.3  DS2505.man  (+41 more)
src/man/man5/: Makefile.am  description.5so  owfs.aliasfile.5  owfs.aliasfile.man  owfs.conf.5  owfs.man
src/man/mann/: Makefile.am  ow.n  owtcl.man  seealso.nso
src/scripts/systemd/: Makefile.am  owfs.service  owfs.service.in  owftpd.service  owftpd.service.in  owhttpd.service  owhttpd.service.in  owserver.service  owserver.service.in  owserver.socket.in
src/scripts/windows/: .cvsignore  Makefile.am  README.txt  dllextract.sed  dns_sd.h  dnssd.lib  mDNSResponder-107.6.diff  owfs.nsi.in
(+675 files in other folders)
